# prism

./: .gitignore  BugSplat AI Notes.md  BugSplat AI Prompt.md  BugSplat Fixes.md  README.md  autobuild.xml  build.sh  configure.cmake
.github/workflows/: build.yaml  prism-build.yml
branding/: README.md
doc/: BUILD.LINUX.md  external-editor-json-rpc.md  llpipeline-library-feasibility.md
docs/tpv/: README.md  branding.md  compliance-checklist.md  graphics-audit.md  port-radar.md  privacy-policy.md  reference-viewers.md  roadmap.md  upstream-merge-log.md
indra/: CMakeLists.txt
indra/cmake/: 00-Common.cmake  Boost.cmake  CMakeLists.txt  Copy3rdPartyLibs.cmake  LLKDU.cmake  LSLDefinitions.cmake  Linking.cmake  SDL3.cmake  Variables.cmake  ViewerMiscLibs.cmake  bugsplat.cmake
indra/llappearance/: llavatarappearance.cpp  lltexlayer.cpp  lltexlayer.h  llwearable.cpp
indra/llcharacter/: CMakeLists.txt  llcharacter.cpp  llcharacter.h  lljointsolverrp3.cpp  lljointsolverrp3.h  llvisualparam.h
indra/llcommon/: CMakeLists.txt  llapp.cpp  llapp.h  llapr.cpp  llcommon.cpp  llcoros.cpp  llcoros.h  lldate.cpp  llerror.cpp  llerror.h  llinitparam.h  llkeybind.cpp  llkeybind.h  llmainthreadtask.h  llprocess.cpp  llprocess.h  llprocessor.cpp  llsd.cpp  llsd.h  llsdjson.cpp  llsdserialize.cpp  llsdserialize_xml.cpp  llsingleton.h  llstl.h  llstring.cpp  llstring.h  llsys.cpp  llthread.cpp  llthread.h  lluuid.h  llwatchdog.cpp  llwatchdog.h  llworkgraphmanager.cpp
indra/llcommon/tests/: lldependencies_test.cpp  llleap_test.cpp  llmainthreadtask_test.cpp  llprocess_test.cpp  llsd_test.cpp  llsdserialize_test.cpp  llstring_test.cpp
indra/llcorehttp/: CMakeLists.txt  _httpservice.cpp  _httpservice.h  _mutex.h  _refcounted.h  _thread.h  lljsonrpcws.cpp  lljsonrpcws.h  llwebsocketmgr.cpp  llwebsocketmgr.h
indra/llfilesystem/: lldir.cpp  lldir.h  lldiskcache.cpp  llfilesystem.cpp  llfilesystem.h
indra/llfilesystem/tests/: lldir_test.cpp
indra/llimage/: llimage.cpp
indra/llimagej2coj/: llimagej2coj.cpp
indra/llinventory/: CMakeLists.txt  llinventory.cpp  llinventory.h  llinventorydefines.h  llinventorytype.h  lllandmark.cpp  lllandmark.h  llsettingsbase.cpp  llsettingssky.cpp  llsettingssky.h
indra/llkdu/: llimagej2ckdu.cpp
indra/llmath/: llmath.h  llvolume.cpp  llvolume.h  llvolumeoctree.h
indra/llmessage/: CMakeLists.txt  llassetstorage.cpp  llcachename.cpp  llcircuit.cpp  llcorehttputil.cpp  llcorehttputil.h  llexperiencecache.cpp  llpacketbuffer.h  llpacketring.cpp  llpacketring.h  llqueryflags.h  lltransfermanager.cpp  llviewernetworkthread.cpp  llviewernetworkthread.h  message.cpp  message.h  message_prehash.cpp  message_prehash.h  net.cpp
indra/llmessage/tests/: lldatapacker_test.cpp
indra/llplugin/: llpluginclassmedia.cpp  llpluginclassmedia.h  llpluginclassmediaowner.h
indra/llprimitive/: CMakeLists.txt  llgltfloader.cpp  llgltfloader.h  llgltfmaterial.cpp  llgltfmaterial.h  llmaterialid.h  llmodel.h  llmodelloader.cpp  llprimitive.cpp  llprimitive.h  llprimtexturelist.cpp  llprimtexturelist.h
indra/llprimitive/gltf/: accessor.cpp  animation.cpp  asset.cpp  asset.h  buffer_util.h  primitive.cpp
indra/llprimitive/tests/: llgltfmaterial_test.cpp  llprimitive_test.cpp
indra/llrender/: CMakeLists.txt  llcompositable.h  llcompositor.cpp  llcompositor.h  llcubemap.cpp  llcubemaparray.cpp  llfontfreetype.cpp  llfontgl.cpp  llgl.cpp  llgl.h  llglheaders.h  llglslshader.cpp  llglslshader.h  llglstates.h  llgltexture.cpp  llgltexture.h  llgpuresource.cpp  llgpuresource.h  llimagegl.cpp  llimagegl.h  llpostprocess.cpp  llrender.cpp  llrender.h  llrendertarget.cpp  llrendertarget.h  llresourcelease.h  llshadermgr.cpp  llshadermgr.h  llswapchain.cpp  llswapchain.h  lltestsquarecompositable.cpp  lltestsquarecompositable.h  lltexture.h  lluiimage.cpp  lluiimage.h  lluiimage.inl  llvertexbuffer.cpp  llvertexbuffer.h
indra/llui/: CMakeLists.txt  llcombobox.cpp  llcombobox.h  llflatlistview.cpp  llflatlistview.h  llfloater.cpp  llfolderview.cpp  llfolderviewitem.cpp  llfolderviewitem.h  llgestureautocompletehelper.cpp  llgestureautocompletehelper.h  llkeywords.cpp  llkeywords.h  lllineeditor.cpp  llpanel.cpp  llresmgr.cpp  llresmgr.h  llscrollcontainer.cpp  llscrollcontainer.h  llscrolllistctrl.cpp  llscrolllistctrl.h  lltabcontainer.cpp  lltextbase.cpp  lltextbase.h  lltexteditor.cpp  lltexteditor.h  lltextvalidate.cpp  lltextvalidate.h  lluicolortable.cpp  llurlaction.cpp  llurlaction.h  llurlentry.cpp  llview.cpp  llview.h  llxuiparser.cpp  llxyvector.cpp
indra/llwindow/: CMakeLists.txt  llgamecontrol.cpp  llgamecontrol.h  llgamecontroltranslator.cpp  llkeyboard.cpp  llkeyboard.h  llkeyboardmacosx.h  llkeyboardsdl.cpp  llkeyboardsdl.h  llkeyboardwin32.cpp  llkeyboardwin32.h  llsdl.cpp  llsdl.h  llwindow.cpp  llwindow.h  llwindowcallbacks.cpp  llwindowcallbacks.h  llwindowheadless.h  llwindowmacosx-objc.h  llwindowmacosx-objc.mm  llwindowmacosx.cpp  llwindowmacosx.h  llwindowmacosx_iokit.h  llwindowmesaheadless.h  llwindowsdl.cpp  llwindowsdl.h  llwindowwin32.cpp  llwindowwin32.h
indra/llxml/: llcontrol.cpp  llcontrol.h
indra/media_plugins/cef/: CMakeLists.txt  media_plugin_cef.cpp
indra/newview/: CMakeLists.txt  featuretable.txt  featuretable_mac.txt  fscommon.cpp  fscommon.h  fsfloaterradar.cpp  fsfloaterradar.h  fspanelradar.cpp  fspanelradar.h  fsradar.cpp  fsradar.h  fsradarentry.cpp  fsradarentry.h  fsradarlistctrl.cpp  fsradarlistctrl.h  fsradarmenu.cpp  fsradarmenu.h  fsscrolllistctrl.cpp  fsscrolllistctrl.h  gltfscenemanager.cpp  licenses-linux.txt  licenses-mac.txt  licenses-win32.txt  llaccountingcostmanager.cpp  llagent.cpp  llagent.h  llagentwearables.cpp  llagentwearables.h  llaisapi.cpp  llaisapi.h  llappdelegate-objc.mm  llappearancemgr.cpp  llappearancemgr.h  llappviewer.cpp  llappviewer.h  llappviewerlinux.cpp  llappviewerlinux.h  llappviewermacosx-objc.h  llappviewermacosx-objc.mm  llappviewermacosx.cpp  (+207 more)
indra/newview/gltf/: README.md  (+3 more)
indra/test/: CMakeLists.txt  test.cpp
scripts/messages/: message_template.msg  message_template.msg.sha1
(+156 files in other folders)
